monaco editor integration started

--- a/public/iframes.html
+++ b/public/iframes.html
@@ -5,11 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iframe</title>
 </head>
 
 <body>
-    <h1>Hi there</h1>
+    <div id="root"></div>
+    <script>
+        window.addEventListener('message', (event) => {
+            try {
+                eval(event.data);
+                console.log(event.data);
+            } catch (error) {
+                const root = document.querySelector("#root");
+                root.innerHTML = '<div style = "color: red"><h4>Runtime Error:</h4>' + error + '</div>'
+                console.log(error);
+            }
+        }, false);
+    </script>
 </body>
 
 </html>
